2000-11-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Added support for using pre-installed libtiff.  Controlled via
	--with-libtiff configure switch.

2000-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Added CEOS_DM_* metadata items for CEOS SAR format at Peter
	Farris-Manning's request in frmts/ceos2/sar_ceosdataset.cpp.

	* Fixed bug in complex image overview generation (core/overview.cpp).
	The complex overview images were corrupt.

2000-11-16  Frank Warmerdam  <warmerda@cs46980-c>

	* Moved GXF driver down in driver order (in GDALAllRegister()).
	Improved test for GXFness in gxfdataset.cpp a bit.

2000-10-30  Frank Warmerdam  <warmerda@cs46980-c>

	* Added error related entry points to gdal.i/gdal.py for python.

	* Fixed ehdrdataset.cpp to report error if the user selects the
	.hdr file instead of the .bil file.  

	* Fixed bug with GetRasterColorTable in gdal.py, and 
	GetRasterNoDataValue in gdal.i.

2000-10-25  Frank Warmerdam  <warmerda@cs46980-c>

	* Issued an interim 1.1.2 release for folks interested in 
	testing Imagine write support.

2000-10-17  Frank Warmerdam  <warmerda@cs46980-c>

	* Added PostgreSQL vector driver under ogr/ogrsf_frmts/pg.

2000-10-13  Frank Warmerdam  <warmerda@cs46980-c>

	* GTiff: improved support for writing GCS codes, and hardcode 
	common datums
	
	* Fixed EquidistantConic support for GeoTIFF. 

	* Fixed up cygnus support in port/cpl_port.h.

2000-10-12  Frank Warmerdam  <warmerda@cs46980-c>

	* gdal/frmts/hfa: Implemented write support for Imagine files.

2000-10-06  Frank Warmerdam  <warmerda@cs46980-c>

	* Upgraded PAuxDataset to support nodata values.

	* Added SetNoDataValue(), SetCategoryNames() and some C/Python entry 
	points.

	* Default setting of GDALRasterBand->eAccess based on the dataset
	in SetBand().

2000-09-28  Frank Warmerdam  <warmerda@cs46980-c>

	* Updated to current MITAB source from CVS. 

2000-09-27  Frank Warmerdam  <warmerda@cs46980-c>

	* Added colortable support for grass driver. 
