@@ -1,3 +1,8 @@
+2000-11-27  Bernhard Reiter <bernhard@intevation.de>
+
+	* Enable the use of the --exec-prefix and --libdir etc configure 
+	options and should give the same behaviour.
+
 2000-11-24  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added support for using pre-installed libtiff.  Controlled via
